rtsp-client: Fix factory leaking in find_media() in error cases

https://bugzilla.gnome.org/show_bug.cgi?id=771488